[package]
name = "gwasm-api"
version = "0.1.0"
authors = ["Golem RnD Team <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/gwasm-rust-api"
homepage = "https://github.com/golemfactory/gwasm-rust-api"
documentation = "https://docs.rs/gwasm-rust-api"
description = "gWasm API for Rust apps"

[dependencies]
actix = "0.8"
thiserror = "1.0"
futures = "0.1"
actix-wamp = "0.1"
golem-rpc-api = "0.1"
golem-rpc-macros = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
tempfile = "3.0"
tokio-ctrlc-error = "0.1"
tokio = "0.1"

[dev-dependencies]
indicatif = "0.11"
tempfile = "3"
anyhow = "1.0"

[badges]
maintenance = { status = "actively-developed" }
