[package]
name = "gwasm-api"
version = "0.1.1"
authors = ["Golem RnD Team <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/gwasm-rust-api"
homepage = "https://github.com/golemfactory/gwasm-rust-api"
documentation = "https://docs.rs/gwasm-rust-api"
description = "gWasm API for Rust apps"

[dependencies]
actix = "0.9"
thiserror = "1"
futures = "0.3"
actix-wamp = { path = "../golem-client/actix-wamp", version = "0.2" }
golem-rpc-api = { path = "../golem-client/golem-rpc-api", version = "0.2" }
golem-rpc-macros = { path = "../golem-client/golem-rpc-macros", version = "0.2" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
tempfile = "3"

[dependencies.tokio]
version = "0.2"
features = [
    "time",
    "signal"
]

[dev-dependencies]
indicatif = "0.11"
anyhow = "1"

[badges]
maintenance = { status = "actively-developed" }
